# log-poet

./: .env.example  README.md  README_EN.md  error_collector.py  llm_poetry_generator.py  main.py  poetry_generator.py  pyproject.toml  score.json  setup.py
data/: errors.json  poems.json  system_errors.json
templates/: abab.txt  freeverse.txt  haiku.txt
